# blockyarchive

./: .gitignore  .travis.yml  BLKAR_SPECS.md  CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  Makefile  README.md  RSBX_SPEC.md  RSBX_SPECS.md  SBX_FORMAT.md  appveyor.yml  build.rs  cov.sh  install_kcov.sh  kcov_run_tests_and_upload_reports.sh  kcov_upload_reports.sh
ci/: before_deploy.ps1  before_deploy.sh  script.sh
cov_tests/: burst_corruption_tests.sh  burst_corruption_tests_decode_stdout.sh  check_hash_tests.sh  clean.sh  copy.sh  copy_release.sh  corruption_tests.sh  corruption_tests_decode_stdout.sh  dev_tests.sh  file_size_calc_tests.sh  gen_dummy.sh  hash_tests.sh  kcov_blkar_fun.sh  kcov_rsbx_fun.sh  negative_params_tests.sh  nometa_tests.sh  out_file_logic_tests.sh  progress_report_test.sh  repair_truncated_tests.sh  rescue_from_to_tests.sh  rescue_pick_uid_tests.sh  rescue_tests.sh  show_pick_uid_tests.sh  sort_multi_pass.sh  sort_multi_pass_no_skip.sh  sort_tests.sh  speed_test.sh  start_tests.sh  test_list.sh  time.sh  update_fnm_tests.sh  update_no_fnm_tests.sh  update_no_snm_tests.sh  update_snm_tests.sh  version_tests.sh  version_tests_decode_stdout.sh  version_tests_encode_stdin.sh  versus.sh
crc-ccitt/: Cargo.toml  build.rs
crc-ccitt/src/: lib.rs
crcccitt/: Cargo.toml  build.rs
crcccitt/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sbx_block.rs  fuzz_sbx_header.rs  fuzz_sbx_metadata.rs
mpmc_rb/: Cargo.toml
mpmc_rb/src/: lib.rs
proptest-regressions/data_block_buffer/: buffer_tests.txt  lot_tests.txt  slot_tests.txt
reed-solomon-erasure/: Cargo.toml
reed_solomon/: Cargo.toml  build.rs
reed_solomon/src/: galois.rs  lib.rs  matrix.rs
shell-completions/: bash-blkar
shell_completions/: bash-blkar
src/: block_preds.rs  block_utils.rs  check_core.rs  cli_calc.rs  cli_check.rs  cli_decode.rs  cli_encode.rs  cli_macros.rs  cli_repair.rs  cli_rescue.rs  cli_show.rs  cli_sort.rs  cli_update.rs  cli_utils.rs  crc_ccitt.rs  data_block_buffer.rs  decode_core.rs  encode_core.rs  encode_defaults.rs  file_error.rs  file_reader.rs  file_utils.rs  file_utils_tests.rs  file_writer.rs  general_error.rs  hash_stats.rs  header_preds.rs  integer_utils.rs  integer_utils_tests.rs  json_macros.rs  json_printer.rs  json_utils.rs  lib.rs  log.rs  main.rs  misc_macros.rs  misc_utils.rs  misc_utils_test.rs  misc_utils_tests.rs  multihash.rs  (+24 more)
src/data_block_buffer/: buffer_tests.rs  lot_tests.rs  mod.rs  slot_tests.rs  tests.rs
src/mpmc_rb/: lib.rs  mod.rs
src/rescue_buffer/: mod.rs  tests.rs
src/rs_codec/: encoder.rs  encoder_tests.rs  mod.rs  repairer.rs  repairer_tests.rs  test.rs
src/sbx_block/: crc.rs  header.rs  helper.rs  (+8 more)
tests/: burst_corruption_tests.sh  burst_corruption_tests_decode_stdout.sh  burst_corruption_tests_encode_stdin.sh  check_from_to_force_misalign.sh  check_from_to_rounding.sh  check_from_to_tests.sh  check_hash_only_tests.sh  check_hash_tests.sh  check_hash_tests_manual_burst.sh  check_ref_block_from_to_force_misalign.sh  check_ref_block_from_to_rounding.sh  check_ref_block_from_to_tests.sh  check_ref_from_to_tests.sh  check_ref_from_to_tests_force_misalign.sh  check_ref_from_to_tests_rounding.sh  clean.sh  compare_decode_file_and_stdout.sh  compare_decode_file_and_stdout_corrupted_container.sh  compare_decode_file_and_stdout_nometa.sh  compare_encode_file_and_stdin.sh  copy.sh  copy_release.sh  corrupt.sh  corruption_tests.sh  corruption_tests_decode_stdout.sh  corruption_tests_encode_stdin.sh  decode_blanks.sh  decode_blanks_decode_stdout.sh  decode_from_to_tests.sh  decode_from_to_tests_corruption_based.sh  decode_from_to_tests_corruption_based_force_misalign.sh  decode_from_to_tests_corruption_based_rounding.sh  decode_from_to_tests_decode_stdout.sh  decode_from_to_tests_decode_stdout_force_misalign.sh  decode_from_to_tests_decode_stdout_rounding.sh  decode_from_to_tests_force_misalign.sh  decode_from_to_tests_rounding.sh  decode_guess_burst_force_misalign.sh  decode_manual_burst.sh  decode_manual_burst_decode_stdout.sh  (+76 more)
(+3 files in other folders)
