[package]
name    = "blkar"
version = "6.1.0"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2018"
build   = "build.rs"
exclude = [
    "ci/*",
    "tests/*",
    "cov_tests/*",
    "crc-ccitt/*",
    "libcrc_crcccitt/*",
    "appveyor.yml",
    ".travis.yml",
]

description   = "Archive with forward error correction and sector level recoverability"

documentation = "https://github.com/darrenldl/blockyarchive/wiki"
homepage      = "https://github.com/darrenldl/blockyarchive"
repository    = "https://github.com/darrenldl/blockyarchive"

readme        = "README.md"

keywords    = [
    "EC-SeqBox",
    "backup",
    "data-recovery",
    "reed-solomon",
    "archive"
]

categories  = ["command-line-utilities", "encoding"]

license     = "MIT"

[[bin]]
name = "blkar"
path = "src/bin/main.rs"
doc  = false

[lib]
name = "blkar_lib"
path = "src/lib.rs"
doc  = false

[dependencies]
reed-solomon-erasure = { version = "3.1", features = ["pure-rust"] }
sha-1                = "0.8.1"
sha2                 = "0.8.0"
blake2_c             = "0.3"
rand                 = "0.6.1"
smallvec             = "0.6"
nom                  = "4.0"
chrono               = "0.4"
clap                 = "2.30.0"
ctrlc                = "3.1"

[dev-dependencies]
quickcheck = "0.8"
