[package]
name    = "blkar"
version = "7.2.1"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2018"
build   = "build.rs"
exclude = [
    "ci/*",
    "tests/*",
    "cov_tests/*",
    "crc-ccitt/*",
    "libcrc_crcccitt/*",
    "appveyor.yml",
    ".travis.yml",
]

description   = "Archive with forward error correction and sector level recoverability"

documentation = "https://github.com/darrenldl/blockyarchive/wiki"
homepage      = "https://github.com/darrenldl/blockyarchive"
repository    = "https://github.com/darrenldl/blockyarchive"

readme        = "README.md"

keywords    = [
    "EC-SeqBox",
    "backup",
    "data-recovery",
    "reed-solomon",
    "archive"
]

categories  = ["command-line-utilities", "encoding"]

license     = "MIT"

[[bin]]
name = "blkar"
path = "src/bin/main.rs"
doc  = false

[lib]
name = "blkar_lib"
path = "src/lib.rs"
doc  = false

[dependencies]
reed-solomon-erasure = { version = "~ 3.1.1", features = ["pure-rust"] }
sha-1                = "~ 0.8.1"
sha2                 = "~ 0.8.0"
blake2               = "~ 0.8.0"
rand                 = "~ 0.6.1"
smallvec             = "~ 0.6.9"
nom                  = "~ 4.2.3"
chrono               = "~ 0.4.6"
clap                 = "~ 2.33.0"
ctrlc                = "~ 3.1.2"
num_cpus             = "~ 1.10.1"
rayon                = "~ 1.1.0"

[dev-dependencies]
quickcheck = "~ 0.8.2"
proptest   = "~ 0.9.4"
